Se agregaron estilos CSS

--- a/servers_node/index.html
+++ b/servers_node/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="style.css" > -->
     <title>Document</title>
+    <style>
+        .fondo{
+            background-color: black;
+            /* background-image: radial-gradient(120deg, #84fab0 0%, #8fd3f4 100%); */
+        }
+        .letra{
+            font-family: impact;
+            font-size: 30vh;
+            text-transform: uppercase;
+            background-image: url("https://fondosmil.com/fondo/34260.jpg");
+            background-size: contain;
+            -webkit-background-clip: text;
+            background-position: center;
+            color: transparent;
+            text-align: center;
+            margin-top: 15%;
+            letter-spacing: 20px;
+            transition: 5000ms;
+        }
+        .letra:hover{
+            background-position: left;
+            background-size: contain;
+            transition: 5000ms;
+        }
+    </style>
 </head>
-<body>
-    <h1>Hola programación en NODE.js</h1>
+<body class="fondo">
+    <h1 class="letra">Texto prueba</h1>
 </body>
 </html>
