--- a/formularios/index.html
+++ b/formularios/index.html
@@ -9,6 +9,9 @@
     </style>
 </head>
 <body class="fondo">
-    <h1 class="letra">Holaaaa {donde}</h1>
+    <h1 class="letra">Holaaaa {nombre}</h1>
+    <form action="/">
+        <input type="text" name="nombre" id="nombre" required>
+    </form>
 </body>
 </html>
